; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_error_recover_complete.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_error_recover_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at86rf230_state_change = type { i64, %struct.at86rf230_local* }
%struct.at86rf230_local = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @at86rf230_async_error_recover_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @at86rf230_async_error_recover_complete(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.at86rf230_state_change*, align 8
  %4 = alloca %struct.at86rf230_local*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.at86rf230_state_change*
  store %struct.at86rf230_state_change* %6, %struct.at86rf230_state_change** %3, align 8
  %7 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %3, align 8
  %8 = getelementptr inbounds %struct.at86rf230_state_change, %struct.at86rf230_state_change* %7, i32 0, i32 1
  %9 = load %struct.at86rf230_local*, %struct.at86rf230_local** %8, align 8
  store %struct.at86rf230_local* %9, %struct.at86rf230_local** %4, align 8
  %10 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %3, align 8
  %11 = getelementptr inbounds %struct.at86rf230_state_change, %struct.at86rf230_state_change* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %3, align 8
  %16 = call i32 @kfree(%struct.at86rf230_state_change* %15)
  br label %17

17:                                               ; preds = %14, %1
  %18 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %19 = getelementptr inbounds %struct.at86rf230_local, %struct.at86rf230_local* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ieee802154_wake_queue(i32 %20)
  ret void
}

declare dso_local i32 @kfree(%struct.at86rf230_state_change*) #1

declare dso_local i32 @ieee802154_wake_queue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
